# data-modern-and-data-stack

./: README.md  main.py  pyproject.toml
.astro/: config.yaml
dags/: main.py
